# Table

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md  grammar.md  semantics.md
src/: bytecode.rs  chunk.rs  ir.rs  ir2.rs  lexer.rs  main.rs  misc.rs  parser.rs  parser2.rs  table.rs  test.tbl  value.rs  vm.rs
src/c/: basic_things.c  c_compiler.rs  mod.rs  translation_wrapper.rs  transpile.rs  transpile_2.rs
src/compiler/: mod.rs
src/compiler/ir/: ir_bytecode_compiler.rs  mod.rs
src/compiler/parser/: error.rs  lexer.rs  mod.rs  span.rs  testing.rs
src/compiler/parser2/: error.rs  ir_bytecode_compiler.rs  lexer.rs  mod.rs  parser.rs  parsing_ir.rs  scanner.rs  statement.rs  table_exp.rs  tokens.rs
src/compiler/parser2/vm2/: bytecode.rs  chunk.rs  mod.rs  pointers.rs  table.rs  value.rs  vm.rs
src/compiler/parser2/vm3/: bytecode.rs  chunk.rs  ir_bytecode_compiler.rs  mod.rs  pointer.rs  table.rs  value.rs  vm.rs
src/register_machine/: ir_bytecode_compiler.rs  mod.rs  stack_value.rs  vm.rs
src/second_attempt/: c_gen_helper.rs  ir.rs  ir3.rs  ir_to_string.rs  ir_to_string_2.rs  lexer.rs  mod.rs  parser.rs  test_transpiler.rs  transpiler.rs
src/second_attempt/c_files/: shared_std.h  table_std.c  table_std.h  walloc.c  walloc.h
src/second_attempt/vm/: bytecode.rs  mod.rs
src/second_attempt/vm2/: bytecode.rs  misc.rs  mod.rs
src/second_attempt/vm3/: mod.rs  table.rs  value.rs
src/virtual_machine/: bytecode.rs  chunk.rs  mod.rs  table.rs  util.rs  value.rs  vm.rs
src/wasm/: mod.rs  wasm_compiler.rs
