[package]
name = "table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = {  git = "https://github.com/zesterer/chumsky" }
terminal-emoji = "0.4.1"
indexmap = "1.9.2"
ariadne = "0.1.5"
wasm-encoder = "0.20.0"
wasmtime = "4.0.0"
clang = "2.0.0"